Implement webhook call disconnected API
