# src/PhoneBox.Server/WebHook/WebHookRequest.cs
@@ -1,14 +1,0 @@
-﻿namespace PhoneBox.Server.WebHook
-{
-    internal sealed class WebHookRequest
-    {
-        public string FromPhoneNumber { get; }
-        public string ToPhoneNumber { get; }
-
-        public WebHookRequest(string fromPhoneNumber, string toPhoneNumber)
-        {
-            this.FromPhoneNumber = fromPhoneNumber;
-            this.ToPhoneNumber = toPhoneNumber;
-        }
-    }
-}
